--- a/Project1/index.html
+++ b/Project1/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/e3b0779339.js" crossorigin="anonymous"></script>
 </head>
 
-<!-- *34:31 minute -->
+<!-- *50.14 minute -->
 
 <body>
 
@@ -31,7 +31,7 @@
 
                     <div class="header-inspire-text">
                         <h1>Inspire your inspiration</h1>
-                        <p>Simple to use for your app, products showcase and your inspiration</p>
+                        <p class="big">Simple to use for your app, products showcase and your inspiration</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus
                             tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat
                             tempor. In quis arcu et eros porta lobortis sit
@@ -133,8 +133,10 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique
                     bibendum. Donec rutrum sed sem quis venenatis.
                 </p>
-                <input type="text" placeholder="Enter your Email To Update">
-                <input type="submit" value="submit" name="submit">
+                <div class="input">
+                    <input type="text" placeholder="Enter your Email To Update">
+                    <input type="submit" value="submit" name="submit">
+                </div>
                 <ul class="social">
                     <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
@@ -142,49 +144,50 @@
                     <li><a href="#"><i class="fa-brands fa-pinterest-p"></i></a></li>
                 </ul>
             </div>
-        </div>
-        <div class="footer-menu">
-            <div class="footer-grid">
-                <div class="footer-menu-items">
-                    <p> HALOVIETNAM LTD <br>
-                        66, Dang Van ngu, Dong Da
-                        Hanoi, Vietnam
-                    </p>
-                    <p>
-                        contact@halovietnam.com <br>
-                        +844 35149182
-                    </p>
+            <div class="footer-menu">
+                <div class="footer-grid">
+                    <div class="footer-menu-items">
+                        <p> HALOVIETNAM LTD <br>
+                            66, Dang Van ngu, Dong Da
+                            Hanoi, Vietnam
+                        </p>
+                        <p>
+                            contact@halovietnam.com <br>
+                            +844 35149182
+                        </p>
+                    </div>
+                    <div class="footer-menu-items">
+                        <ul>
+                            <li> <a href="">Example</a> </li>
+                            <li> <a href="">Shop</a> </li>
+                            <li> <a href="">License</a> </li>
+                        </ul>
+                    </div>
+                    <div class="footer-menu-items">
+                        <ul>
+                            <li> <a href="">Contact</a> </li>
+                            <li> <a href="">About</a> </li>
+                            <li> <a href="">Privacy</a> </li>
+                        </ul>
+                    </div>
+                    <div class="footer-menu-items">
+                        <ul>
+                            <li> <a href="">Download</a> </li>
+                            <li> <a href="">Support</a> </li>
+                            <li> <a href="">Documents</a> </li>
+                        </ul>
+                    </div>
+                    <div class="footer-menu-items">
+                        <ul>
+                            <li> <a href="">Media</a> </li>
+                            <li> <a href="">Blog</a> </li>
+                            <li> <a href="">Forums</a> </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="footer-menu-items">
-                    <ul>
-                        <li> <a href="">Example</a> </li>
-                        <li> <a href="">Shop</a> </li>
-                        <li> <a href="">License</a> </li>
-                    </ul>
-                </div>  
-                <div class="footer-menu-items">
-                    <ul>
-                        <li> <a href="">Contact</a> </li>
-                        <li> <a href="">About</a> </li>
-                        <li> <a href="">Privacy</a> </li>
-                    </ul>
-                </div>  
-                <div class="footer-menu-items">
-                    <ul>
-                        <li> <a href="">Download</a> </li>
-                        <li> <a href="">Support</a> </li>
-                        <li> <a href="">Documents</a> </li>
-                    </ul>
-                </div>  
-                <div class="footer-menu-items">
-                    <ul>
-                        <li> <a href="">Media</a> </li>
-                        <li> <a href="">Blog</a> </li>
-                        <li> <a href="">Forums</a> </li>
-                    </ul>
-                </div>  
             </div>
         </div>
+
     </footer>
 
 </body>
