--- a/Project2/index.html
+++ b/Project2/index.html
@@ -6,34 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/e3b0779339.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
 <body>
 
     <header>
-        <div class="container">
-            <nav>
-                <div class="logo">
-                    <img src="img/logo.png" alt="">
+
+        <nav>
+            <div class="container">
+                <div class="nav-flex">
+                    <div class="logo">
+                        <img src="img/logo.png" alt="">
+                    </div>
+
+                    <ul class="menu">
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">portfolio</a></li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">blog</a></li>
+                        <li><a href="#">contact</a></li>
+                    </ul>
                 </div>
+            </div>
 
-                <ul class="menu">
-                    <li><a href="#">home</a></li>
-                    <li><a href="#">portfolio</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">blog</a></li>
-                    <li><a href="#">contact</a></li>
-                </ul>
+        </nav>
 
-            </nav>
-
-            <section class="header-webpaint">
-                <h1>We are Webpaint</h1>
+        <section class="header-webpaint">
+            <div class="container">
+                <h1>We are <span class="t-big">Webpaint</span> </h1>
                 <p>digital & branding agency based in Jupiter and we would love to turn ideas into beautiful things.</p>
                 <a class="header-link" href="#">See portfolio</a>
-            </section>
-        </div>
+            </div>
+        </section>
 
     </header>
 
@@ -41,20 +47,24 @@
         <div class="container">
             <div class="services-grid">
                 <div class="servicse-items">
+                    <i class="fa-brands fa-android"></i>
                     <h3>Consectetur</h3>
-                    <p>Vestibulum id ligula porta  euismod semper. Aenean lacinia bibendum nulla sed consectetur dui.</p>
+                    <p>Vestibulum id ligula porta euismod semper. Aenean lacinia bibendum nulla sed consectetur dui.</p>
                 </div>
                 <div class="servicse-items">
+                    <i class="fa-solid fa-display"></i>
                     <h3>Consectetur</h3>
-                    <p>Vestibulum id ligula porta  euismod semper. Aenean lacinia bibendum nulla sed consectetur dui.</p>
+                    <p>Vestibulum id ligula porta euismod semper. Aenean lacinia bibendum nulla sed consectetur dui.</p>
                 </div>
                 <div class="servicse-items">
+                    <i class="fa-solid fa-camera"></i>
                     <h3>Consectetur</h3>
-                    <p>Vestibulum id ligula porta  euismod semper. Aenean lacinia bibendum nulla sed consectetur dui.</p>
+                    <p>Vestibulum id ligula porta euismod semper. Aenean lacinia bibendum nulla sed consectetur dui.</p>
                 </div>
                 <div class="servicse-items">
+                    <i class="fa-solid fa-clock"></i>
                     <h3>Consectetur</h3>
-                    <p>Vestibulum id ligula porta  euismod semper. Aenean lacinia bibendum nulla sed consectetur dui.</p>
+                    <p>Vestibulum id ligula porta euismod semper. Aenean lacinia bibendum nulla sed consectetur dui.</p>
                 </div>
             </div>
         </div>
@@ -68,12 +78,14 @@
             </div>
 
             <div class="ourfeatured-content">
-                <ul class="ourportfolio">
-                    <li><a href="#">All</a></li>
-                    <li><a href="#">Graphic</a></li>
-                    <li><a href="#">Illustrations</a></li>
-                    <li><a href="#">Motion</a></li>
-                </ul>
+                <div class="center">
+                    <ul class="ourportfolio">
+                        <li><a href="#">All</a></li>
+                        <li><a href="#">Graphic</a></li>
+                        <li><a href="#">Illustrations</a></li>
+                        <li><a href="#">Motion</a></li>
+                    </ul>
+                </div>
 
                 <div class="ourportfolio-grid">
                     <div class="ourportfolio-items">
@@ -117,6 +129,34 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <section class="footer-top">
+            <h1>Get In Touch</h1>
+            <p>Vestibulum id ligula porta felis euismod semper,malesuada euismod.</p>
+            <div class="center">
+                <ul class="footer-top-address">
+
+                    <li><span><i class="fa-solid fa-location-dot"></i></span></i>Moonshine Street No: 14/05 Light City,
+                        Jupiter </li>
+
+                    <li> <span><i class="fa-solid fa-phone-flip"></i></span> 0247 541 65 87</li>
+                </ul>
+            </div>
+            <div class="center">
+                <ul class="footer-top-social">
+                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="footer-bottom">
+            <p>&copy; 2022 Webpaint. All Rights Reserved</p>
+        </section>
+    </footer>
 
 </body>
 
